# OMAYA-Project

./: .env.example  .env.ha.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.small.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Docs/: API_REFERENCE.md  API_STRATEGY.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  INSTALLATION.md  MODEL_GOVERNANCE.md  MODULES.md  PRICING.md  README.md  RELEASE_PROCESS.md  SENSOR_INTEGRATION.md  TROUBLESHOOTING.md  USER_MANUAL.md  VAULT_INTEGRATION.md
audit_logs/: audit_20260626.jsonl
backend/: .env.example  Dockerfile  ai_models.py  audit_trails.py  auth.py  data_lake.py  database.py  drift_detection.py  edge_computing.py  explainable_ai.py  global_deployment.py  graphql_layer.py  kafka_consumer.py  kafka_init.py  kafka_producer.py  kafka_streams.py  logger_config.py  main.py  middleware.py  mqtt_sparkplug.py  multi_modal_fusion.py  multi_region.py  multi_tenancy.py  online_learning.py  online_learning_v2.py  performance_optimization.py  prometheus_metrics.py  rate_limiter.py  redis_cache.py  requirements.txt  secrets_manager.py  security_hardening.py  service_mesh.py  store_and_forward.py  (+3 more)
edge-rust/: Cargo.toml
edge-rust/src/: lib.rs  modbus_connector.rs  mqtt_sparkplug.rs  store_forward.rs
(+115 files in other folders)
