[package]
name = "omaya-edge-connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
modbus = "1.0"
opcua = "0.12"
rumqttc = "0.23"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
bytes = "1.5"
